no longer propegating compiler opts between targets

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,5 +8,5 @@ ADD_SUBDIRECTORY(gpu)
 TARGET_LINK_LIBRARIES(vkr-backend
     PUBLIC vkr-gpu
     PRIVATE Vulkan::Vulkan
-    INTERFACE vkr-global-compiler-opts)
+    PRIVATE vkr-global-compiler-opts)
 TARGET_INCLUDE_DIRECTORIES(vkr-backend INTERFACE "../src")
