--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,8 +9,7 @@ TARGET_LINK_LIBRARIES(vkr-tests
         PRIVATE ${CMAKE_DL_LIBS}
         PRIVATE Catch2WithMain
         PRIVATE vkr-backend
-        PRIVATE vkr-gpu-tests
-        INTERFACE vkr-global-compiler-opts)
+        PRIVATE vkr-gpu-tests)
 
 TARGET_INCLUDE_DIRECTORIES(vkr-tests
         PRIVATE ${vk-bootstrap_SOURCE_DIR}/src)
