--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_EXECUTABLE(vkr-tests
         ${vk-bootstrap_SOURCE_DIR}/src/VkBootstrap.cpp
         src/utils/MemoryUtils.cpp
         src/utils/VulkanContext.cpp
+        src/utils/IDebugMessenger.cpp
         src/stages/setup/TestFullStage.cpp
         src/stages/setup/TestClipping.cpp)
 
